Fixed bug #317 - FF layout issue with approval type inputs (radios)

--- a/src/feeddb/feed/static/src/less/custom.less
+++ b/src/feeddb/feed/static/src/less/custom.less
@@ -615,7 +615,7 @@ body { background: url('../../../../../images/greyzz.png'); color: @navy; color:
           span {
           #id_approval_type { list-style-type: none;
             label { position: relative; padding: 0 0 0 26px; color: @navy; color: @navy-alpha; line-height: 22px; text-transform: none; margin-bottom: 20px; font-size: 16px; font-weight: 400;
-              input { position: absolute; left: 0; top: 1px; }
+              input { position: absolute; left: 0; top: 1px; width: 14px; }
             }
           }
           .add-another { display: none; }
